--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Flexigo"
         tools:targetApi="31">
         <activity
+            android:name=".basic"
+            android:exported="false" />
+        <activity
+            android:name=".beginner"
+            android:exported="false" />
+        <activity
             android:name=".Beginner"
             android:exported="false"
             android:label="@string/title_activity_beginner"
